Fix input label spacing #759

--- a/src/components/forms/input.less
+++ b/src/components/forms/input.less
@@ -1,9 +1,10 @@
 
 .bss-form-group {
 	margin-bottom: 16px;
+	display: block;
 
-		display: block;
 	label {
+		display: block;
 		font-size: 12px;
 		color: @dark-gray;
 		height: 24px;
